--- a/Presentation.MauiMvvm/AppShell.xaml
+++ b/Presentation.MauiMvvm/AppShell.xaml
@@ -4,27 +4,29 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Presentation.MauiMvvm"
-    
     xmlns:views="clr-namespace:Presentation.MauiMvvm.Views"
     
     Shell.FlyoutBehavior="Flyout"
     Title="Presentation.MauiMvvm">
 
 
-    <ShellContent Title="Add Project" ContentTemplate="{DataTemplate views:AddProjectView}" Route="AddProjectView" />
-    <ShellContent Title="Show Projects" ContentTemplate="{DataTemplate views:ShowProjectsView}" Route="ShowProjectsView" />
-    <ShellContent Title="Edit Project" ContentTemplate="{DataTemplate views:EditProjectView}" Route="EditProjectView" />
+    <FlyoutItem Title="Projects">
+        <ShellContent Title="All Projects" ContentTemplate="{DataTemplate views:ShowProjectsView}" Route="ShowProjectsView" />
+        <ShellContent Title="Add Project" ContentTemplate="{DataTemplate views:AddProjectView}" Route="AddProjectView" />
+    </FlyoutItem>
 
-    <ShellContent Title="All Products" ContentTemplate="{DataTemplate views:ShowProductsView}" Route="ShowProductsView" />
-    <ShellContent Title="Add Product" ContentTemplate="{DataTemplate views:AddProductView}" Route="AddProductView" />
-    <ShellContent Title="Edit Product" ContentTemplate="{DataTemplate views:EditProductView}" Route="EditProductView" />
+    <FlyoutItem Title="Services">
+        <ShellContent Title="All Services" ContentTemplate="{DataTemplate views:ShowProductsView}" Route="ShowProductsView" />
+        <ShellContent Title="Add Service" ContentTemplate="{DataTemplate views:AddProductView}" Route="AddProductView" />
+    </FlyoutItem>
 
-    <ShellContent Title="All Customers" ContentTemplate="{DataTemplate views:ShowCustomersView}" Route="ShowCustomersView" />
-    <ShellContent Title="Add Customer" ContentTemplate="{DataTemplate views:AddCustomerView}" Route="AddCustomerView" />
-    <ShellContent Title="Edit Customer" ContentTemplate="{DataTemplate views:EditCustomerView}" Route="EditCustomerView" />
+    <FlyoutItem Title="Customers">
+        <ShellContent Title="All Customers" ContentTemplate="{DataTemplate views:ShowCustomersView}" Route="ShowCustomersView" />
+        <ShellContent Title="Add Customer" ContentTemplate="{DataTemplate views:AddCustomerView}" Route="AddCustomerView" />
+    </FlyoutItem>
 
-    <ShellContent Title="All Users" ContentTemplate="{DataTemplate views:ShowUsersView}" Route="ShowUsersView" />
-    <ShellContent Title="Add User" ContentTemplate="{DataTemplate views:AddUserView}" Route="AddUserView" />
-    <ShellContent Title="Edit User" ContentTemplate="{DataTemplate views:EditUserView}" Route="EditUserView" />
-
+    <FlyoutItem Title="Users">
+        <ShellContent Title="All Users" ContentTemplate="{DataTemplate views:ShowUsersView}" Route="ShowUsersView" />
+        <ShellContent Title="Add User" ContentTemplate="{DataTemplate views:AddUserView}" Route="AddUserView" />
+    </FlyoutItem>
 </Shell>
