--- a/Presentation.MauiMvvm/Views/ShowCustomersView.xaml
+++ b/Presentation.MauiMvvm/Views/ShowCustomersView.xaml
@@ -10,15 +10,21 @@
              Shell.NavBarIsVisible="False"
              Title="ShowCustomersView">
     <ScrollView>
-        <Grid RowDefinitions="auto, *" Padding="10" BackgroundColor="White">
-
-            <Label Text="All Customers" FontSize="28" FontAttributes="Bold"/>
+        <Grid RowDefinitions="auto, *" Padding="15" BackgroundColor="White">
 
             <VerticalStackLayout>
-
-                <Grid ColumnDefinitions="50, *" Padding="10, 5" BackgroundColor="LightGray">
-                    <Label Text="Id" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black"/>
-                    <Label Text="Customer name" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" Grid.Column="1" />
+                <Label Text="All Customers" FontSize="28" FontAttributes="Bold" VerticalOptions="Center" HorizontalOptions="Center" TextColor="#3f3f3f" Padding="10"/>
+                
+                <Grid ColumnDefinitions="0.5*, 3*, 1*" Padding="10, 5" BackgroundColor="LightGray" ColumnSpacing="15">
+                    <Grid Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Start" ColumnDefinitions="auto, *">
+                        <Label Text="Id" FontAttributes="Bold" TextColor="Black" VerticalTextAlignment="Center" />
+                        <Button Text="&#xf0dc;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" Grid.Column="1" Command="{Binding SortCustomerListByCustomerIdCommand}" />
+                    </Grid>
+                    <Grid Grid.Column="1" VerticalOptions="Center" HorizontalOptions="Start" ColumnDefinitions="auto, *">
+                        <Label Text="Customer name" FontAttributes="Bold" TextColor="Black" VerticalTextAlignment="Center" HorizontalTextAlignment="Start"/>
+                        <Button Text="&#xf0dc;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" Grid.Column="1" Command="{Binding SortCustomerListByCustomerNameCommand}" />
+                    </Grid>
+                    <Label Text="Actions" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" Grid.Column="3" HorizontalOptions="End"/>
                 </Grid>
 
                 <CollectionView ItemsSource="{Binding CustomerList}">
@@ -30,20 +36,22 @@
                                         StrokeShape="RoundRectangle 3"
                                         Padding="1"
                                         Margin="2, 1">
-                                <Grid ColumnDefinitions="50, *, auto, auto" Padding="5">
-                                    <Label Text="{Binding CustomerId}" Grid.Column="0" TextColor="Black" VerticalOptions="Center"/>
-                                    <Label Text="{Binding CustomerName}" Grid.Column="1" TextColor="Black" VerticalOptions="Center" />
+                                <Grid ColumnDefinitions="0.5*, 3*, 1*" Padding="10, 5" ColumnSpacing="15">
+                                    <Label Text="{Binding CustomerId}" Grid.Column="0" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center" HorizontalOptions="Start"/>
+                                    <Label Text="{Binding CustomerName}" Grid.Column="1" TextColor="Black" VerticalOptions="Center" HorizontalOptions="Start"/>
 
 
-                                    <HorizontalStackLayout Grid.Column="2" Spacing="5">
-                                        <Button Text="Edit" CommandParameter="{Binding .}" Command="{Binding Path=NavigateToEditCustomerCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowCustomersViewModel}}}" />
-                                        <Button Text="Delete" CommandParameter="{Binding .}" Command="{Binding Path=DeleteCustomerCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowCustomersViewModel}}}" />
+                                    <HorizontalStackLayout Grid.Column="2" Spacing="5" HorizontalOptions="End">
+                                        <Button Text="&#xF044;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" CommandParameter="{Binding .}" Command="{Binding Path=NavigateToEditCustomerCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowCustomersViewModel}}}" />
+                                        <Button Text="&#xF1F8;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" CommandParameter="{Binding .}" Command="{Binding Path=DeleteCustomerCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowCustomersViewModel}}}" />
                                     </HorizontalStackLayout>
                                 </Grid>
                             </Border>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
+
+                <Label Text="{Binding StatusMessage}" TextColor="{Binding StatusMessageColor}" FontSize="14" FontAttributes="Bold" />
             </VerticalStackLayout>
         </Grid>
     </ScrollView>
