--- a/Presentation.MauiMvvm/Views/ShowUsersView.xaml
+++ b/Presentation.MauiMvvm/Views/ShowUsersView.xaml
@@ -11,16 +11,27 @@
              Title="ShowUsersView">
 
     <ScrollView>
-        <Grid RowDefinitions="auto, *" Padding="10" BackgroundColor="White">
-
-            <Label Text="All Users" FontSize="28" FontAttributes="Bold" />
-
+        <Grid RowDefinitions="auto, *" Padding="15" BackgroundColor="White">
             <VerticalStackLayout>
+                <Label Text="All Users" FontSize="28" FontAttributes="Bold" VerticalOptions="Center" HorizontalOptions="Center" TextColor="#3f3f3f" Padding="10"/>
+                
                 <Grid ColumnDefinitions="0.5*, 2*, 2*, 3*, 1*" Padding="10,5" ColumnSpacing="15" BackgroundColor="LightGrey">
-                    <Label Text="Id" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" Grid.Column="0" HorizontalOptions="Start"/>
-                    <Label Text="First name" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" Grid.Column="1" HorizontalOptions="Start"/>
-                    <Label Text="Last name" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" Grid.Column="2" HorizontalOptions="Start"/>
-                    <Label Text="Email" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" Grid.Column="3" HorizontalOptions="Start"/>
+                    <Grid Grid.Column="0" HorizontalOptions="Start" VerticalOptions="Center" ColumnDefinitions="auto, *">
+                        <Label Text="Id" FontAttributes="Bold" TextColor="Black" VerticalTextAlignment="Center"/>
+                        <Button Text="&#xf0dc;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" Grid.Column="1" Command="{Binding SortUserListByUserIdCommand}"/>
+                    </Grid>
+                    <Grid  Grid.Column="1" HorizontalOptions="Start" ColumnDefinitions="auto, *" VerticalOptions="Center" >
+                        <Label Text="First name" FontAttributes="Bold" TextColor="Black" VerticalTextAlignment="Center"/>
+                        <Button Text="&#xf0dc;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" Grid.Column="1" Command="{Binding SortUserListByFirstNameCommand}" />
+                    </Grid>
+                    <Grid ColumnDefinitions="auto, *" Grid.Column="2" HorizontalOptions="Start" VerticalOptions="Center">
+                        <Label Text="Last name" FontAttributes="Bold" TextColor="Black" VerticalTextAlignment="Center"/>
+                        <Button Text="&#xf0dc;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" Grid.Column="1" Command="{Binding SortUserListByLastNameCommand}" />
+                    </Grid>
+                    <Grid ColumnDefinitions="auto, *" Grid.Column="3" HorizontalOptions="Start" VerticalOptions="Center">
+                        <Label Text="Email" FontAttributes="Bold" TextColor="Black" VerticalTextAlignment="Center"/>
+                        <Button Text="&#xf0dc;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" Grid.Column="1" Command="{Binding SortUserListByEmailCommand}" />
+                    </Grid>
                     <Label Text="Actions" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" Grid.Column="4" HorizontalOptions="End"/>
                 </Grid>
 
@@ -34,20 +45,22 @@
                                     Padding="1"
                                     Margin="2, 1">
                                 <Grid ColumnDefinitions="0.5*, 2*, 2*, 3*, 1*" Padding="10, 5" ColumnSpacing="15">
-                                    <Label Text="{Binding UserId}" Grid.Column="0" TextColor="Black" VerticalOptions="Center" HorizontalOptions="Start"/>
+                                    <Label Text="{Binding UserId}" Grid.Column="0" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center" HorizontalOptions="Start"/>
                                     <Label Text="{Binding FirstName}" Grid.Column="1" TextColor="Black" VerticalOptions="Center" HorizontalOptions="Start"/>
                                     <Label Text="{Binding LastName}" Grid.Column="2" TextColor="Black" VerticalOptions="Center" HorizontalOptions="Start"/>
                                     <Label Text="{Binding Email}" Grid.Column="3" TextColor="Black" VerticalOptions="Center" HorizontalOptions="Start"/>
 
                                     <HorizontalStackLayout Grid.Column="4" Spacing="5" HorizontalOptions="End">
-                                        <Button Text="Edit" CommandParameter="{Binding .}" Command="{Binding Path=NavigateToEditUserCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowUsersViewModel}}}" />
-                                        <Button Text="Delete" CommandParameter="{Binding .}" Command="{Binding Path=DeleteUserCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowUsersViewModel}}}" />
+                                        <Button Text="&#xF044;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" CommandParameter="{Binding .}" Command="{Binding Path=NavigateToEditUserCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowUsersViewModel}}}" />
+                                        <Button Text="&#xF1F8;" FontFamily="FontAwesomeSolid" TextColor="DarkGrey" BackgroundColor="Transparent" CommandParameter="{Binding .}" Command="{Binding Path=DeleteUserCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ShowUsersViewModel}}}" />
                                     </HorizontalStackLayout>
                                 </Grid>
                             </Border>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
+
+                <Label Text="{Binding StatusMessage}" TextColor="{Binding StatusMessageColor}" FontSize="14" FontAttributes="Bold" />
             </VerticalStackLayout>
         </Grid>
     </ScrollView>
